requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta" 

[project]
name = "watchdog-td"
version = "0.1.0"
description = "A watchdog component"
authors = [
  {name = "Julian Krumow", email = "julian.krumow@artcom.de"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
