requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta" 

[project]
name = "watchdog-td"
version = "0.1.3"
description = "A watchdog component"
authors = [
  {name = "Julian Krumow", email = "julian.krumow@artcom.de"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.package-data]
my_package = ["*.tox"]

[tool.setuptools]
include-package-data = true